--- a/app/views/custom_fields/_form.html.erb
+++ b/app/views/custom_fields/_form.html.erb
@@ -8,7 +8,7 @@
 <p><%= f.check_box :multiple, :disabled => @custom_field.multiple && !@custom_field.new_record? %></p>
 <% end %>
 
-<% unless @custom_field.format_in? 'list', 'bool', 'date', 'user', 'version', 'address' %>
+<% unless @custom_field.format_in? 'list', 'bool', 'date', 'user', 'version' %>
 <p><label for="custom_field_min_length"><%=l(:label_min_max_length)%></label>
    <%= f.text_field :min_length, :size => 5, :no_label => true %> - 
    <%= f.text_field :max_length, :size => 5, :no_label => true %><br />(<%=l(:text_min_max_length_info)%>)</p>
@@ -22,7 +22,7 @@
 </p>
 <% end %>
 
-<% unless @custom_field.format_in? 'user', 'version', 'address' %>
+<% unless @custom_field.format_in? 'user', 'version' %>
 <p><%= @custom_field.field_format == 'bool' ? f.check_box(:default_value) : f.text_field(:default_value) %></p>
 <% end %>
 
