--- a/plugins/lgdis/app/views/shelters/edit.html.erb
+++ b/plugins/lgdis/app/views/shelters/edit.html.erb
@@ -18,6 +18,7 @@
   <div class="box tabular">
     <div id="all_attributes">
       <% @disabled = true unless authorize_for(:shelters, :update) # 権限判定 %>
+      <%= f.hidden_field :updated_by, :value => User.current.login %>
       <%= render :partial => 'form', :locals => {:f => f} %>
     </div>
   </div>
