--- a/plugins/lgdis/app/views/custom_fields/_view_custom_fields_form_upper_box.html.erb
+++ b/plugins/lgdis/app/views/custom_fields/_view_custom_fields_form_upper_box.html.erb
@@ -1,23 +1,23 @@
-<% if (custom_field.format_in? 'list') && (custom_field.class.name == "IssueCustomField") %>
-<p><%= form.check_box :is_default_all_selected %></p>
+<% if custom_field.format_in? 'list' %>
+<p>
+  <%= form.text_area :default_value, :value => custom_field.default_value.to_a.join("\n"), :rows => 15, :id => "custom_field_default_value_multiple", :style => "width:99%;" %>
+  <em class="info"><%= l(:text_custom_field_default_value_multiple_info) %></em>
+</p>
 <%= javascript_tag do %>
   $(function(){
     $("#custom_field_multiple").change(function(){
-      var $custom_field_is_default_all_selected = $("#custom_field_is_default_all_selected");
-      if($(this).is(":checked") == true){
-        $custom_field_is_default_all_selected.removeAttr("disabled");
-      } else {
-        $custom_field_is_default_all_selected.attr("checked", false);
-        $custom_field_is_default_all_selected.attr("disabled","disabled");
-      }
-    }).change();
-    
-    $("#custom_field_is_default_all_selected").change(function(){
       var $custom_field_default_value = $("#custom_field_default_value");
-      if($(this).is(":checked") == true){
-        $custom_field_default_value.attr("disabled","disabled");
+      var $custom_field_default_value_multiple = $("#custom_field_default_value_multiple");
+      if ($(this).is(":checked") == true) {
+        $custom_field_default_value.parent().toggle(false);
+        $custom_field_default_value.attr("disabled", "disabled");
+        $custom_field_default_value_multiple.parent().toggle(true);
+        $custom_field_default_value_multiple.removeAttr("disabled");
       } else {
+        $custom_field_default_value.parent().toggle(true);
         $custom_field_default_value.removeAttr("disabled");
+        $custom_field_default_value_multiple.parent().toggle(false);
+        $custom_field_default_value_multiple.attr("disabled", "disabled");
       }
     }).change();
   });
