global_locationsの記述ミス修正

--- a/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_description_bottom.html.erb
@@ -116,6 +116,9 @@ end %>
   // DBにポリゴンデータが複数存在する可能性があるため配列で全てのポリゴンデータを作成
   var global_polygons = <%== @polygons.to_json %>
 
+  // ロケーションデータ作成
+  // DBにロケーションデータが複数存在する可能性があるため配列で全てのロケーションデータを作成
+  var global_locations = <%== @locations.to_json %>
   // ------------------------------------------------
   // グローバル変数
   var map;
