--- a/plugins/lgdis/lib/lgdis/ext_out/georss1_0.tmpl
+++ b/plugins/lgdis/lib/lgdis/ext_out/georss1_0.tmpl
@@ -3,7 +3,7 @@
 	xmlns:georss="http://www.georss.org/georss">
 	<title>%{@title}</title>
 	<subtitle>%{@subtitle}</subtitle>
-	<link href=%{@site_url}/>
+	<link href="#{@site_url}"/>
 	<updated>%{@updated}</updated>
 	<author>
 		<name>%{@author}</name>
