--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -1,8 +1,9 @@
-<fieldset class="collapsible collapsed">
+<div style="display:none;"></div><%# IE8のバグで、fieldsetがうまく描画されないため、ダミーで要素追加 %>
+<fieldset class="collapsible">
   <legend onclick="toggleFieldset(this);"><%= l(:ext_out_field) %></legend>
+  <div>
   <%= form_tag("/deliver_issues/request_delivery") do %>
     <div>
-      <nobr>
         <p><strong><label><%= l(:delivery_place) %>:</label></strong></p>
         <%= hidden_field_tag :issue_id, @issue.id %>
         <%= hidden_field_tag :current_user, User.current %>
@@ -10,9 +11,10 @@
 
         <% unless @destination_list.blank? %>
           <% @destination_list.each do |dest|%>
-            <%= check_box_tag "ext_out_target[]", dest['target_num'] %><label><%= dest['name'] %></label>
+            <label style="display: block;float: left;"><%= check_box_tag "ext_out_target[]", dest['target_num'] %><%= dest['name'] %></label>
           <% end %>
         <% end %>
+        <div style="clear:both;"></div>
     </div>
 
     <p><strong><label><%= l(:control_plane_settings) %>:</label></strong></p>
@@ -132,6 +134,6 @@
       <% end %>
     <% end %>
   <% end %>
-    </nobr>
+  <hr />
+  </div>
 </fieldset>
-<hr />
