配信管理 コントロールプレーン部チケット登録処理を追加

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -58,8 +58,8 @@
         <div class="splitcontentleft">
           <p>
             <label>情報の発表日時</label>
-            <%= text_field_tag "issue_published_at", @issue.published_at, :size=>'10' %><%= calendar_for("issue_published_at") %>
-            <%= text_field_tag "issue_published_at_time", '', :size=>'10' %>
+            <%= text_field_tag "issue[published_date]", @issue.published_date, :size=>'10' %><%= calendar_for("issue_published_date") %>
+            <%= text_field_tag "issue[published_hm]",   @issue.published_hm,   :size=>'10' %>
           </p>
         </div>
         <div class="splitcontentright">
@@ -78,15 +78,15 @@
         <div class="splitcontentleft">
           <p>
             <label>情報の公開開始日時</label>
-            <%= text_field_tag "issue_opened_at", @issue.opened_at, :size=>'10' %><%= calendar_for("issue_opened_at") %>
-            <%= text_field_tag "issue_opened_at_time", @issue.opened_at, :size=>'10' %>
+            <%= text_field_tag "issue[opened_date]", @issue.opened_date, :size=>'10' %><%= calendar_for("issue_opened_date") %>
+            <%= text_field_tag "issue[opened_hm]",   @issue.opened_hm,   :size=>'10' %>
           </p>
         </div>
         <div class="splitcontentright">
           <p>
             <label>情報の公開終了日時</label>
-            <%= text_field_tag "issue_closed_at", @issue.closed_at, :size=>'10' %><%= calendar_for("issue_closed_at") %>
-            <%= text_field_tag "issue_closed_at_time", @issue.closed_at, :size=>'10' %>
+            <%= text_field_tag "issue[closed_date]", @issue.closed_date, :size=>'10' %><%= calendar_for("issue_closed_date") %>
+            <%= text_field_tag "issue[closed_hm]",   @issue.closed_hm,   :size=>'10' %>
           </p>
         </div>
       </div>
