配信要求で、+号配備毎のメーリングリストを振り分け処理を実装。配信要求処理のリファクタリング。

--- a/plugins/lgdis/app/views/deliver_issues/index.html.erb
+++ b/plugins/lgdis/app/views/deliver_issues/index.html.erb
@@ -11,7 +11,7 @@
     <tr>
       <th style="text-align: left">配信先 :</th>
       <th style="text-align: left">
-        <%= DST_LIST['destination_name'][@delivery_history.delivery_place_id] %>
+        <%= DST_LIST['delivery_place'][@delivery_history.delivery_place_id]['name'] %>
       </th>
     </tr>
     <tr>
