--- a/plugins/lgdis/app/views/delivery_histories/index.html.erb
+++ b/plugins/lgdis/app/views/delivery_histories/index.html.erb
@@ -19,7 +19,7 @@
             <td style="text-align: center;">
                <%= link_to d_h.issue_id, issue_path(d_h.issue) %>
             </td>
-            <td style="text-align: center;"><%= DST_LIST['destination_name'][d_h.delivery_place_id] %></td>
+            <td style="text-align: center;"><%= DST_LIST['delivery_place'][d_h.delivery_place_id]['name'] %></td>
             <td style="text-align: center;"><%= DST_LIST['status'][d_h.status] %></td>
             <td style="text-align: center;"><%= d_h.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
             <td style="text-align: center;"><%= d_h.request_user %></td>
