配信管理　リファクタリング時の修正漏れ。不要メソッドの削除。デバッグ用の標準出力を削除。

--- a/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
+++ b/plugins/lgdis/app/views/issues/_view_issues_show_details_bottom.html.erb
@@ -11,7 +11,7 @@
 
         <% unless @destination_list.blank? %>
           <% @destination_list.each do |dest|%>
-            <label style="display: block;float: left;"><%= check_box_tag "ext_out_target[]", dest['target_num'] %><%= dest['name'] %></label>
+            <label style="display: block;float: left;"><%= check_box_tag "ext_out_target[]", dest['id'] %><%= dest['name'] %></label>
           <% end %>
         <% end %>
         <div style="clear:both;"></div>
