--- a/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
+++ b/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
@@ -2,4 +2,5 @@
   <%= button_to l('external_auth.sign_in_via', :kind => 'Google'), '/auth/google' %>
   <%= button_to l('external_auth.sign_in_via', :kind => 'Twitter'), '/auth/twitter' %>
   <%= button_to l('external_auth.sign_in_via', :kind => 'facebook'), '/auth/facebook' %>
+  <%= button_to l('external_auth.sign_in_via', :kind => 'OpenAM'), '/auth/openam' %>
 <% end %>
