カスタムフィールドの日付で、時刻有無を設定できるように実装。カスタムフィールド日時の入力補助機能を追加。

--- a/plugins/lgdis/app/views/custom_fields/_view_custom_fields_form_upper_box.html.erb
+++ b/plugins/lgdis/app/views/custom_fields/_view_custom_fields_form_upper_box.html.erb
@@ -1,3 +1,7 @@
+<% if custom_field.format_in? 'date' %>
+<p><%= form.check_box :include_time, :disabled => @custom_field.include_time && !@custom_field.new_record? %></p>
+<% end %>
+
 <% if custom_field.format_in? 'list' %>
 <p>
   <%= form.text_area :default_value, :value => custom_field.default_value.to_a.join("\n"), :rows => 15, :id => "custom_field_default_value_multiple", :style => "width:99%;" %>
