--- a/plugins/lgdis/assets/stylesheets/issue.css
+++ b/plugins/lgdis/assets/stylesheets/issue.css
@@ -25,3 +25,11 @@ div.map_field {
   width: 100%;
   height: 280px;
 }
+
+.ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
+.ui-timepicker-div dl { text-align: left; }
+.ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
+.ui-timepicker-div dl dd { margin: 0 10px 10px 65px; }
+.ui-timepicker-div td { font-size: 90%; }
+.ui-tpicker-grid-label { background: none; border: none; margin: 0; padding: 0; }
+#ui-datepicker-div { font-size: 12px; }
