--- a/plugins/lgdis/app/views/deliver_issues/index.html.erb
+++ b/plugins/lgdis/app/views/deliver_issues/index.html.erb
@@ -23,7 +23,7 @@
     <tr>
       <th style="text-align: left">チケット作成日 :</th>
       <th style="text-align: left">
-        <%= @issue.created_on.strftime("%Y-%m-%d %H:%M:%S") %>
+        <%= @issue.created_on.strftime("%Y-%m-%d %H:%M:%S") unless @issue.created_on.blank? %>
       </th>
     </tr>
   <thead>
