--- a/plugins/lgdis/app/views/shelters/_form.html.erb
+++ b/plugins/lgdis/app/views/shelters/_form.html.erb
@@ -22,7 +22,7 @@
   
   <%= field_for :area, :required => true do |key, label| %>
     <%= label_tag{label} %>
-    <%= f.select key, options_for_select(@area.invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+    <%= f.select key, options_for_select(@areas.map{|v| [v.name,v.area_code]}, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
   <% end %>
   
   <%= field_for :address, :required => true do |key, label| %>
