--- a/plugins/lgdis/app/views/shelters/_list.html.erb
+++ b/plugins/lgdis/app/views/shelters/_list.html.erb
@@ -31,7 +31,7 @@
           </a>
         </td>
         <td style="text-align: center;"><%= @shelter_const["shelter_type"][shelter.shelter_type] %></td>
-        <td style="text-align: center;"><%= @area[shelter.area] %></td>
+        <td style="text-align: center;"><%= @areas.select{|v| v.area_code == shelter.area}.first.try(:name) %></td>
         <td style="text-align: center;"><%= shelter.phone %></td>
         <td style="text-align: center;"><%= shelter.manager_name %></td>
         <td style="text-align: center;">
