--- a/plugins/lgdis/app/views/shelters/_search_conditions.html.erb
+++ b/plugins/lgdis/app/views/shelters/_search_conditions.html.erb
@@ -7,7 +7,7 @@
     
     <%= field_for :area do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select("#{key}_eq", options_for_select(@area.invert, @search.area_eq),:include_blank => true) %>
+      <%= f.select("#{key}_eq", options_for_select(@areas.map{|v| [v.name,v.area_code]}, @search.area_eq),:include_blank => true) %>
     <% end %>
     
     <%= field_for :usable_flag do |key, label| %>
