要望対応のためレイアウト調整

--- a/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
+++ b/plugins/lgdis/app/views/account/_view_account_login_bottom.html.erb
@@ -1,6 +1,14 @@
 <% if Setting.plugin_lgdis.present? && Setting.plugin_lgdis[:enable_external_auth] %>
-  <%= button_to l('external_auth.sign_in_via', :kind => 'Google'), '/auth/google' %>
-  <%= button_to l('external_auth.sign_in_via', :kind => 'Twitter'), '/auth/twitter' %>
-  <%= button_to l('external_auth.sign_in_via', :kind => 'facebook'), '/auth/facebook' %>
-  <%= button_to l('external_auth.sign_in_via', :kind => 'OpenAM'), '/auth/openam' %>
+<div id="login-form">
+  <table>
+    <tr>
+      <td><%= link_to l('external_auth.sign_in_via', :kind => 'Google'), '/auth/google' %></td>
+      <td><%= link_to l('external_auth.sign_in_via', :kind => 'Twitter'), '/auth/twitter' %></td>
+    </tr>
+    <tr>
+      <td><%= link_to l('external_auth.sign_in_via', :kind => 'facebook'), '/auth/facebook' %></td>
+      <td><%= link_to l('external_auth.sign_in_via', :kind => 'OpenAM'), '/auth/openam' %></td>
+    </tr>
+  </table>
+</div>
 <% end %>
